# pybind11_protobuf

./: .bazelrc  .gitmodules  CMakeLists.txt
.github/workflows/: ccpcheck.yml  ccplint.yml  ubuntu-build.yml
extras/: BUILD  README.md
extras/msgs/: BUILD  pose.proto  vector3d.proto
extras/python/: BUILD  extras_example.py  pose_example.py  vector3d_example.py
extras/src/: extras.cc  extras.hh  extras_module.cc
